# DBMS_Mini_Project

./: CITATION.cff  README.md
api/: pyproject.toml
api/api/: app.py
website/: package-lock.json  package.json
website/.husky/: post-commit  pre-commit
website/src/: App.js
