[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for Pawar group DBMS mini project."
authors = ["Ganesh Pawar", "Adesh Pawar", "Ajay Pawar", "Ashish Pawar"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
